--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         </receiver>
 
         <service
-            android:name=".service.RssDownloaderJobIntentService"
+            android:name=".service.DataRecipientJIService"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
